--- a/js/index.html
+++ b/js/index.html
@@ -6,7 +6,7 @@
     <title>Tetris</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-    <script src="patterns.js"></script>
+    <script src="pattern.js"></script>
     <script src="shape.js"></script>
     <script src="game.js"></script>
   </head>
